--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@strapi/blocks-react-renderer": "^1.0.2",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-player": "^2.16.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
