--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-player": "^2.16.1"
+    "react-player": "^2.16.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
